# Recup_Exp_Criativa

./: README.md  pyproject.toml
app/: main.py
app/controllers/: auth_controller.py  cardapio_controller.py  sensor_controller.py
app/models/: usuarios.py
app/templates/: base.html  dashboard.html  manage_users.html
